# animeGame

./: .gitignore  CMakeLists.txt  COMPLETION_SUMMARY.md  Coffee.cpp  README.md  UNREAL_INTEGRATION.md  UNREAL_INTEGRATION_GUIDE.md  electron.cjs  package.json
game/assets/: dialogue.json  enemies.json  items.json  maps.json  mods.json  npcs.json  players.json  quests.json  skills.json  variables.txt
game/assets/ITEM/: items.json  mods.json  skills.json
game/assets/NPC/: dialogue.json  npcs.json
game/assets/PLAY/: enemies.json  maps.json  quests.json
game/assets/PLAY/players/: player_0000.json
game/assets/ROOMS/: dungeon.json
game/src/: main.cpp
game/src/core/: Game.cpp
game/src/environment/: CMakeLists.txt  main.cpp
game/src/logic/cpp/: CMakeLists.txt  CombatSystem.cpp  CombatSystem.h  DialogueSystem.cpp  DialogueSystem.h  Enemy.cpp  Enemy.h  GameLogic.cpp  GameLogic.h  InputHandler.cpp  InputHandler.h  ItemManager.cpp  ItemManager.h  NPC.h  Player.cpp  Player.h  SaveSystem.cpp  SaveSystem.h  SkillSystem.cpp  SkillSystem.h  UIManager.cpp  UIManager.h
game/src/logic/javascript/: engine.js  main.js  network.js  utils.js
game/src/logic/javascript/entities/: enemy.js  npc.js
game/src/logic/javascript/player/: combat.js  item.js  player.js  quest.js
game/src/logic/javascript/world/: dungeon.js  world.js
